[gd_scene load_steps=7 format=3 uid="uid://lscflbdeug6c"]

[ext_resource type="Script" path="res://Code/Weapons/Shuriken.gd" id="1_4b2eg"]
[ext_resource type="Texture2D" uid="uid://c0chxsiq6dorr" path="res://Assets/Items, Armor and equipment/weapons pixel.png" id="2_qfnbb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5k2pj"]
size = Vector2(14.6793, 14.4315)

[sub_resource type="Animation" id="Animation_j0wp5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_lrxnq"]
resource_name = "Spin"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.785398, 1.5708, 3.14159, 3.92699, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i83tm"]
_data = {
"RESET": SubResource("Animation_j0wp5"),
"Spin": SubResource("Animation_lrxnq")
}

[node name="Shuriken" type="Area2D" groups=["RangedAttack"]]
y_sort_enabled = true
scale = Vector2(0.5, 0.5)
collision_layer = 8
collision_mask = 30
script = ExtResource("1_4b2eg")

[node name="Sprite2D" type="Sprite2D" parent="." groups=["Shuriken"]]
rotation = -3.91047
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_qfnbb")
region_enabled = true
region_rect = Rect2(4.96429, 522.277, 53.5905, 43.952)

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Shuriken"]]
shape = SubResource("RectangleShape2D_5k2pj")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="." groups=["Shuriken"]]
rotation = -0.00440366
scale = Vector2(0.728877, 0.72767)

[node name="Spin" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_i83tm")
}

[node name="ShurikenKiller" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="area_entered" from="." to="." method="EnteredEnemy"]
[connection signal="body_entered" from="." to="." method="TilesetEntered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="ArrowLeftScreen"]
[connection signal="timeout" from="ShurikenKiller" to="." method="ShurikenKiller"]
